Fix NoneType comparison error in strategy signals
- Add 'or 0' to handle None values from yfinance
- Fixes '>=' not supported between NoneType and int error
- Ensures kospi_chg, kosdaq_chg, vix_val default to 0

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
   "functions": {
-    "api/refresh.py": {
-      "runtime": "python3.9",
+    "api/**/*.py": {
       "maxDuration": 10,
       "memory": 1024
     },
-    "api/trigger-refresh.js": {
+    "api/**/*.js": {
       "maxDuration": 10
     }
   },
-  "env": {
-    "GITHUB_PAT": "@github_pat"
-  }
+  "rewrites": [
+    { "source": "/", "destination": "/api/refresh" }
+  ]
 }
